added a CSV export

--- a/0_Exploring_VXDB.ipynb
+++ b/0_Exploring_VXDB.ipynb
@@ -2310,11 +2310,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we can export our data [in a neat CSV.](artifacts/0_Exploring_VXDB_tags_by_volume.csv)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_group_by_tag.to_csv('artifacts/0_Exploring_VXDB_tags_by_volume.csv')"
+   ]
   }
  ],
  "metadata": {
