--- a/0_Exploring_VXDB.ipynb
+++ b/0_Exploring_VXDB.ipynb
@@ -2313,6 +2313,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In case the altair plot doesn't load, you can view it here:\n",
+    "![Altair Plot of Tags by Volume](artifacts/0_Exploring_VXDB_tags_by_volume.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Finally, we can export our data [in a neat CSV.](artifacts/0_Exploring_VXDB_tags_by_volume.csv)"
    ]
   },
